<resources>

    <string name="help_title_bb">Get Help</string>
    <string name="watch_video_bb">Watch a Video </string>
    <string name="read_faq_bb">FAQ</string>
    <string name="view_help_screen_bb">View Help Screens</string>
    <string name="send_request_bb">Send Request</string>
    <string name="send_screen_shot_bb">Send Screenshot</string>
    <string name="send_video_bb">Send Video</string>
    <string name="past_request_bb">Past Requests</string>

    <string name="new_request_bb">New Request</string>
    <string name="back_button_string_bb">Back</string>
    <string name="gallery_button_string_bb">Gallery</string>
    <string name="take_screenshot_button_string_bb">Take Screenshot</string>
    <string name="take_video_button_string_bb">Take Video</string>
    <string name="yourname_string_bb">Your Name</string>
    <string name="yourname_hint_string_bb">Use your real name instead of your ID</string>
    <string name="youremail_string_bb">Your Email</string>
    <string name="required_string_bb">(Required)</string>
    <string name="youremail_hint_string_bb">Email will be used to identify all your requests and get notifications about the responses.</string>
    <string name="bug_string_bb">Bug</string>
    <string name="query_string_bb">Query</string>
    <string name="feedack_string_bb">Feedback</string>
    <string name="enteryourmessage_bb">Enter your message here</string>

    <string name="send_screenshot_string_bb">Send Screenshot</string>
    <string name="color_string_bb">Color</string>
    <string name="text_string_bb">Text</string>
    <string name="undo_string_bb">Undo</string>
    <string name="saving_bb">Saving…</string>
    <string name="no_internet_connection_bb">Please check your internet connection.</string>
    <string name="server_error_bb">Server seems running slow,contact your system admin.</string>

    <string name="helpscreens_bb">Help Screens</string>
    <string name="videotitle_bb">Watch a Video</string>
    <string name="faqstring_bb">FAQ</string>
    <string name="api_key_bb">BackbonebitsAPIKey</string>
    <string name="test_mode_bb">BB_test_mode</string>
    <string name="loading_video_bb">Loading Video...</string>

    <string name="txtNameString_bb">Please enter your name</string>
    <string name="txtEmailString_bb">Please enter valid email address</string>
    <string name="txtRequestString_bb">Please enter request type</string>
    <string name="txtMessageString_bb">Please enter your message</string>
    <string name="txtpastrequestString_bb">Past Requests</string>
    <string name="txtpastrequestdetailString_bb">Request Detail</string>
    <string name="requeststring_bb">Request# </string>
    <string name="str_no_data_my_listing_bb">No data available</string>
    <string name="type_message_string_bb">Type your message...</string>
    <string name="sendbuttonstring_bb">Send</string>
    <string name="app_provider">com.backbonebits</string>
    <string name="app_name">BB</string>

    <string name="label_permissions">Please enable Microphone and Storage permissions.</string>
    <!--Permission Manager library -->
    <string name="str_default_rationale_message">We need this permission.Please allow.</string>
    <string name="str_rationale_message">Required Permission</string>
    <string name="str_possitive_button">Ok</string>
    <string name="str_negative_button">Cancel</string>
</resources>
