<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bb_whitecolor"
    android:fitsSystemWindows="true"

    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/lnrTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/bb_blackcolor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.backbonebits.customviews.BBCustomBoldTextView
            android:id="@+id/imgBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/imgCloseBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left|center_vertical"
            android:drawableLeft="@drawable/back_icon_bb"
            android:gravity="center_vertical"
            android:text="@string/back_button_string_bb"
            android:textColor="@color/bb_whitecolor"
            android:textSize="@dimen/_18ssp"
            android:visibility="visible" />

        <com.backbonebits.customviews.BBCustomBoldTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txtpastrequestString_bb"
            android:textColor="@color/bb_whitecolor"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listMesageList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lnrTop"
        android:divider="@color/bb_notificationlight"
        android:dividerHeight="@dimen/_1sdp"
        android:scrollbars="none"
        android:visibility="visible" />

    <com.backbonebits.customviews.BBCustomTextView
        android:id="@+id/txtNoDataJobList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_no_data_my_listing_bb"
        android:textColor="@color/bb_dividercolor"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone" />
</RelativeLayout>
