<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    android:background="@color/bb_whitecolor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lnrTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/bb_blackcolor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.backbonebits.customviews.BBCustomBoldTextView
            android:id="@+id/imgBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/imgCloseBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left|center_vertical"
            android:drawableLeft="@drawable/back_icon_bb"
            android:gravity="center_vertical"
            android:text="@string/back_button_string_bb"
            android:textColor="@color/bb_whitecolor"
            android:textSize="@dimen/_18ssp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imgSendBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txtTitle"
            android:layout_gravity="right"

            android:layout_marginRight="@dimen/_5sdp"
            android:src="@drawable/send_btn_bb"
            android:visibility="visible" />

        <com.backbonebits.customviews.BBCustomBoldTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/new_request_bb"
            android:textColor="@color/bb_whitecolor"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lnrTop"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTakeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bb_list_bg"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"

                android:visibility="gone"
                android:weightSum="3.0">

                <LinearLayout
                    android:id="@+id/llGallery"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gallery_icon_bb" />

                    <com.backbonebits.customviews.BBCustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/gallery_button_string_bb"
                        android:textColor="@color/bb_textcolordark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llScreenshot"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/takescreenshot_icon_bb" />

                    <com.backbonebits.customviews.BBCustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/take_screenshot_button_string_bb"
                        android:textColor="@color/bb_textcolordark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTakeVideo"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/takevideo_icon_bb" />

                    <com.backbonebits.customviews.BBCustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/take_video_button_string_bb"
                        android:textColor="@color/bb_textcolordark" />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bb_lightwhitecolor"
                android:visibility="visible">

                <ImageView

                    android:id="@+id/imgIssueSupportAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_margin="@dimen/_7sdp"
                    android:adjustViewBounds="true"
                    android:background="@color/bb_lightbluecolor"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/red_close_bb" />
            </FrameLayout>

            <com.backbonebits.customviews.BBCustomBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/yourname_string_bb"
                android:textColor="@color/bb_textcolordark"
                android:textSize="@dimen/_20ssp" />

            <com.backbonebits.customviews.BBCustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:text="@string/yourname_hint_string_bb"
                android:textColor="@color/bb_textcolorlight" />

            <com.backbonebits.customviews.BBCustomEdiText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:ellipsize="end"
                android:paddingBottom="@dimen/_10sdp"
                android:drawableLeft="@drawable/user_icon_bb"
                android:textColor="@color/bb_blackcolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.backbonebits.customviews.BBCustomBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:text="@string/youremail_string_bb"
                    android:textColor="@color/bb_textcolordark"
                    android:textSize="@dimen/_20ssp" />

                <com.backbonebits.customviews.BBCustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_string_bb"
                    android:textColor="@color/bb_textcolordark" />
            </LinearLayout>


            <com.backbonebits.customviews.BBCustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:text="@string/youremail_hint_string_bb"
                android:textColor="@color/bb_textcolorlight" />

            <com.backbonebits.customviews.BBCustomEdiText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:drawableLeft="@drawable/bb_icon"
                android:inputType="textNoSuggestions"
                android:textColor="@color/bb_blackcolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/bb_list_bg"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="3.0">

                <LinearLayout
                    android:id="@+id/llQuery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/query_bb" />

                    <com.backbonebits.customviews.BBCustomTextView
                        android:id="@+id/txtQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/query_string_bb"
                        android:textColor="@color/bb_textcolordark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBug"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgBug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bug_bb" />

                    <com.backbonebits.customviews.BBCustomTextView
                        android:id="@+id/txtBug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bug_string_bb"

                        android:textColor="@color/bb_textcolordark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFeedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/feedback_slt_bb" />

                    <com.backbonebits.customviews.BBCustomTextView
                        android:id="@+id/txtFeedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedack_string_bb"

                        android:textColor="@color/bb_lightblackcolor" />

                </LinearLayout>

            </LinearLayout>

            <com.backbonebits.customviews.BBCustomBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:drawableLeft="@drawable/mail_icon_bb"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/enteryourmessage_bb"
                android:textColor="@color/bb_textcolorlight" />

            <com.backbonebits.customviews.BBCustomEdiText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:inputType="text|textNoSuggestions|textMultiLine"
                android:maxLines="3"
               />

            <ExpandableListView
                android:id="@+id/expandableList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMessage"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:choiceMode="singleChoice"
                android:divider="@color/bb_search_bg"
                android:dividerHeight="@dimen/_1sdp"
                android:groupIndicator="@null"
                android:scrollbars="none"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>